Harden single-secret share codec and policy (Landing 3 polish)
- ShareCodec: wipe oversized field-value bytes on the reject path (secret
  material previously lingered until GC); move noteBytes/salt/nonce inside
  the try so the finally wipes the note if randomSalt/randomNonce throw;
  wrap Instant.ofEpochSecond in readInstant so an out-of-range timestamp
  yields ValidationException instead of DateTimeException; document the
  deliberate decode-side KDF-iteration leniency.
- ShareDraft/ShareContents: replace Map.copyOf with an unmodifiable
  LinkedHashMap so the documented insertion/sorted iteration order holds.
- ShareDraft: reject negative kdfIterations (0 still means format default);
  document that fields are not validated against the secret-type schema.
- SharePassphrasePolicy: stop counting whitespace/control characters toward
  the symbol class (a space is one cheap code point).
- ShareContents.toString: redact title as well as fields and note.
- Tests: insertion/sorted order, negative iterations, title redaction,
  oversized field value, whitespace symbol-class behaviour.

Co-Authored-By: Claude <noreply@anthropic.com>